[Fix] Fixing minor warnings from "Code Analysis".